--- a/example/index.html
+++ b/example/index.html
@@ -11,6 +11,7 @@
         <oembed url="https://www.youtube.com/watch?v=aZAJ-K95lLY"></oembed>
         <oembed url="https://vimeo.com/336812660" ></oembed>
         <oembed url="https://www.dailymotion.com/video/x68urbf" ></oembed>
+        <oembed url="https://www.facebook.com/groland/videos/2378990025688262/" ></oembed>
     </div>
         <div id="app"></div>
         <script src="app.bundle.js"></script>
