--- a/example/index.html
+++ b/example/index.html
@@ -7,6 +7,10 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
     </head>
     <body>
+    <h1>Example Funkymed-OEmbed</h1>
+    <p>Author : Cyril Pereira</p>
+    <p>NPM Source : <a href="https://www.npmjs.com/package/funkymed-oembed" target="_blank">https://www.npmjs.com/package/funkymed-oembed</a></p>
+    <p>A simple tool to convert oembed in iframe with content, usefull with CKEditor.</p>
     <div>
         <oembed url="https://www.youtube.com/watch?v=aZAJ-K95lLY"></oembed>
         <oembed url="https://vimeo.com/336812660" ></oembed>
