--- a/example/index.html
+++ b/example/index.html
@@ -12,10 +12,11 @@
     <p>NPM Source : <a href="https://www.npmjs.com/package/funkymed-oembed" target="_blank">https://www.npmjs.com/package/funkymed-oembed</a></p>
     <p>A simple tool to convert oembed in iframe with content, usefull with CKEditor.</p>
     <div>
-        <oembed url="https://www.youtube.com/watch?v=aZAJ-K95lLY"></oembed>
-        <oembed url="https://vimeo.com/336812660" ></oembed>
-        <oembed url="https://www.dailymotion.com/video/x68urbf" ></oembed>
-        <oembed url="https://www.facebook.com/groland/videos/2378990025688262/" ></oembed>
+        <oembed url="https://www.youtu.be/273lxZw25B0"></oembed>
+        <oembed url="https://www.youtube.com/watch?v=Zrock_tnsSQ"></oembed>
+        <oembed url="https://vimeo.com/29991378" ></oembed>
+        <oembed url="https://www.dailymotion.com/xfm4bu" ></oembed>
+        <oembed url="https://www.facebook.com/MotionRideMusic/videos/243875092944509/" ></oembed>
     </div>
         <div id="app"></div>
         <script src="app.bundle.js"></script>
